<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

<string name="app_name">Dailies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help Center</string>
    <string name="action_about">About Us</string>

    <string name="action_home">Home</string>
    <string name="action_profile">My Profile</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">android.fredua.com</string>
    <string name="content_authority">com.fredua.android.dailies</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Enable Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_frequency_label">Reminder Frequency</string>
    <string name="pref_frequency_key" translatable="false">frequency</string>
    <string name="pref_frequency_default">Daily</string>

    <string name="pref_frequency_label_daily">Daily</string>
    <string name="pref_frequency_label_weekly">Weekly</string>

    <string name="pref_frequency_daily">Daily</string>
    <string name="pref_frequency_weekly">Weekly</string>



    <string name="pref_language_label">Language</string>
    <string name="pref_language_key" translatable="false">language</string>
    <string name="pref_language_default">EN</string>

    <string name="pref_language_label_en">English</string>
    <string name="pref_language_label_fr">French</string>
    <string name="pref_language_label_es">Spanish</string>

    <string name="pref_language_en">EN</string>
    <string name="pref_language_fr">FR</string>
    <string name="pref_language_es">ES</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>
    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>
    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">Accra</string>


</resources>
