<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/pref_language_label"
        android:key="@string/pref_language_key"
        android:defaultValue="@string/pref_language_default"
        android:entryValues="@array/pref_language_values"
        android:entries="@array/pref_language_options" />

    <ListPreference
        android:title="@string/pref_frequency_label"
        android:key="@string/pref_frequency_key"
        android:defaultValue="@string/pref_frequency_default"
        android:entryValues="@array/pref_frequency_values"
        android:entries="@array/pref_frequency_options" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

</PreferenceScreen>
