<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_day"
            android:title="@string/action_home" />
        <!--<item-->
            <!--android:id="@+id/nav_profile"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="@string/action_profile" />-->
        <!--<item-->
            <!--android:id="@+id/nav_browse"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="@string/action_browse" />-->
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/action_about" />

        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/action_help" />

    </group>

</menu>
